[package]
name = "rsmole"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
map-macro = "0.2.5"
ndarray = "0.15.6"
regex = "1.7.2"
rusty_ulid = "2.0.0"
strum = "0.24.1"
strum_macros = "0.24.3"
